# petsnowy-py

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
examples/: control.py  credentials.py  monitor.py  status.py
src/petsnowy/: __init__.py  __main__.py  base.py  cli.py  const.py  device.py  exceptions.py  feeder.py  fountain.py  models.py  purifier.py
src/petsnowy/utils/: __init__.py  common.py  feeder.py  fountain.py  litterbox.py  purifier.py
