[tool.poetry]
name = "petsnowy"
version = "0.1.0"
description = "Async Python library for local-network control of PetSnowy devices (litterbox, fountain, purifier, feeder) via Tuya protocol"
license = "MIT"
authors = []
packages = [{include = "petsnowy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tinytuya = ">=1.15"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-bdd = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
bandit = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
detect-secrets = "*"
docformatter = "*"
pyupgrade = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tinytuya.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B110"]

[tool.pytest.ini_options]
markers = [
    "functional: marks tests as functional tests",
    "bdd: marks tests as BDD tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
